[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PCC-FECalc"
version = "0.1.0"
description = "Binding Free Energy Calculations for Protein-Catalyzed Capture Agents"
authors = [
    { name = "Armin Shayesteh Zadeh", email = "arminshzd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "pandas"
]